<resources>
    <string name="app_name">Infits</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="Loremipsum">Lorem ipsum dolor sit amet, consectetur
adipiscing elit, sed do eiusmod tempo
incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud
exercitation ullamco laboris nisi ut aliquip</string>
    <string name="referral_text">Sign  your  friends  up\nShare  the  app  via:</string>
    <string name="Lorem_Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="feature_1">Feature 1</string>
    <string name="feature_2">Feature 2</string>
    <string name="feature_3">Feature 3</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="go_pro">Go Pro!</string>
    <string name="workout_tracker">Workout Tracker</string>
    <string name="consultation">Dietitian &#38; Plan</string>
    <string name="meals_tracker">Share with dietitian</string>
    <string name="diet_chart">All Meal Courses</string>
    <string name="goal">Goal</string>
    <string name="limit">Limit</string>
    <string name="No_data">No data available</string>

    <!--Hints for signup xml-->
    <string name="fullName_hint"><font size="12">Full Name</font></string>
    <string name="userName_hint"><font size="12">Enter a Username</font></string>
    <string name="email_hint"><font size="12">Email ID</font></string>
    <string name="password_hint"><font size="12">Password</font></string>
    <string name="phone_hint"><font size="12">Phone No.</font></string>
    <string name="Age_hint"><font size="12">Age</font></string>
    <string name="Height_hint"><font size="12">Height</font></string>
    <string name="Weight_hint"><font size="12">Weight</font></string>
    <string name="mealtrackerbackbutton">mealtrackerbackbutton</string>
    <string name="meal_tracker">MEAL TRACKER</string>
    <string name="choose_meal_course">Choose meal course</string>
    <string name="breakfast1">Breakfast</string>
    <string name="_1500_recipes">1500 Recipes</string>
    <string name="choose">Choose</string>
    <string name="lunchn">Lunch</string>
    <string name="recently_shared_meals">Recently shared meals</string>


    <!--PLEASE PUT YOUR DEFAULT WEB CLIENT ID TO CONNECT TO FIREBASE OR GOOGLE PROJECT ONLINE -->

    <array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>

    <string-array name="spinner_diet_daily">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="spinner_diet_breakfast">
        <item>Breakfast</item>
        <item>Snacks</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>


    <string name="set_goals">Set Goals</string>
    <string name="calories_consume">Calories Consume</string>
    <string name="_3120_kcal">3120 Kcal</string>
    <string name="_0">0</string>
    <string name="_1000">1000</string>
    <string name="_2000">2000</string>
    <string name="_3000">3000</string>
    <string name="_4000">4000</string>
    <string name="_5000">5000</string>
    <string name="calories_burn">Calories Burn</string>
    <string name="_1250_kcal">1250 Kcal</string>
    <string name="macronutrient_goals">Macronutrient Goals</string>
    <string name="line_for_set_goal">Line for set goal</string>
    <string name="carbs">Carbs</string>
    <string name="_219_g">219 g</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_300">300</string>
    <string name="_400">400</string>
    <string name="_500">500</string>
    <string name="fiber">Fiber</string>
    <string name="_125_g">125 g</string>
    <string name="protein">Protein</string>
    <string name="_312_g">312 g</string>
    <string name="fat">Fat</string>
    <string name="_179_g">179 g</string>
    <string name="set">Set</string>
    <string name="set_goal_confirm">Set goal confirm</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_pic">Profile pic</string>
    <string name="select_dp">Select dp</string>
    <string name="profile_bg">Profile bg</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="gender">Gender</string>
    <string name="gender_male_select">Gender Male Select</string>
    <string name="gender_female_select">Gender Female Select</string>
    <string name="age_icon">Age icon</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="location">Location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="plan">Plan</string>
    <string name="enter_your_plan">Enter your plan</string>
    <string name="height_icon">Height icon</string>
    <string name="height">Height</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="weight_icon">Weight icon</string>
    <string name="weight">Weight</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="about_icon">About icon</string>
    <string name="about">About</string>
    <!--Hints for signup xml-->
    <string name="save">Save</string>
    <string name="setting_notifications_icon">Setting Notifications Icon</string>
    <string name="account_next_icon">Account next icon</string>
    <string name="settings">SETTINGS</string>
    <string name="calories_burnt_in_a_single_day">Calories burnt in a single day</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="calories_consumed_in_a_single_day">Calories consumed in a single day</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="calorie_tracker">CALORIE TRACKER</string>
    <string name="image_forward">Image Forward</string>
    <string name="set_goals_for_macronutrients">Set Goals for Macronutrients</string>
    <string name="calorie_tracker_tool">CALORIE TRACKER</string>
    <string name="_150g">150g</string>
    <string name="left">Left</string>
    <string name="dinner_image">Dinner Image</string>
    <string name="add">+ Add</string>
    <string name="select_your_dinner_meal">Select your dinner meal</string>
    <string name="add_different_food_items_to_the_meal_and_calorie">Add different food items to the meal and calorie</string>
    <string name="tracker_from_here_to_keep_a_track_of_everything">tracker from here to keep a track of everything!</string>
    <string name="select_your_breakfast_meal">Select your breakfast meal</string>
    <string name="breakfastimage">BreakFastImage</string>
    <string name="add_meals">Add Meals</string>
    <string name="swipeupct">Swipeupct</string>
    <string name="select_your_lunch_meal">Select your lunch meal</string>
    <string name="lunch_image">Lunch image</string>
    <string name="select_your_snacks_meal">Select your snacks meal</string>
    <string name="snacksimage">snacksimage</string>
    <string name="profile">PROFILE</string>
    <string name="see_all">See All</string>
    <string name="_25_reviews">25 Reviews:</string>
    <string name="_10_years_experience">10 years experience</string>
    <string name="mumbai">Mumbai</string>
    <string name="_4_8_25_reviews">4.8 (25 Reviews)</string>
    <string name="dietitian">Dietitian</string>
    <string name="dr_strange">Dr.Strange</string>
    <string name="searching_for_devices">Searching for devices...</string>
    <string name="it_is_going_to_take_only_a_few_seconds">It is going to take only a few seconds</string>
    <string name="found_1_device">Found 1 device</string>
    <string name="select_a_device_and_click_the_connect_button">Select a device and click the Connect button</string>
    <string name="no_devices_found">No devices found</string>
    <string name="click_the_scan_for_devices_button_to_refresh">Click the Scan for Devices button to refresh</string>
    <string name="found_d_devices">Found %d devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="found_2_devices">Found 2 devices</string>
    <string name="no_nearby_bluetooth_devices_found">No nearby Bluetooth devices found.</string>
    <string name="connect_device">Connect Device</string>
    <string name="device_management">Device Management</string>
    <string name="dietician_profile">Dietician Profile</string>
    <string name="step_tracker_icon">Step tracker icon</string>
    <string name="step_tracker">Step Tracker</string>
    <string name="calories_tracker">Calories Tracker</string>
    <string name="notification">Notification</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="about_us">ABOUT US</string>
    <string name="help">HELP</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="frequenty_asked_questions">Frequenty Asked Questions</string>
    <string name="faqs">FAQs</string>
    <string name="reach_us_through_email">Reach us through Email</string>
    <string name="search">Search</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_content">Enter content</string>
    <string name="enter_to_email_address">Enter to email address</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="your_quiry">Your quiry</string>
    <string name="status">Status</string>
    <string name="refer">Refer</string>
    <string name="refer_a_friend">Refer a friend</string>


</resources>