<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <!--<Toolbar>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarDiticianProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn_DieticianProfile"
            android:layout_width="52dp"
            android:layout_height="38dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtDieticianProfileToolBar"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/txtDieticianProfileToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:fontFamily="@font/baloo2"
            android:text="@string/dietician_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/backBtn_DieticianProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    <Guideline>-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <!--ScrollView-->
    <ScrollView
        android:id="@+id/editProfileScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">
        <!--    ScrollView LinearLayout Start    -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="80dp">

                <ImageView
                    android:id="@+id/dietician_profile_image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/profile_pic"
                    android:scaleType="fitXY"
                    android:src="@drawable/profilepic" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/dietician_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/nats_regular"
                android:text="@string/dr_strange"
                android:textColor="#676767"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/qualificationProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/status_active"
                android:backgroundTint="#4B9AFB"
                android:gravity="center_horizontal"
                android:text="@string/dietitian"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dieitician_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/_4_8_25_reviews"
                app:drawableStartCompat="@drawable/star" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/background_dashboard"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/location"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/dieitician_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/mumbai" />

                <TextView
                    android:id="@+id/dieitician_experience"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/status_active"
                    android:backgroundTint="#4B9AFB"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/_10_years_experience"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/calender" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/dieitician_about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/nats_regular"
                android:text="@string/Loremipsum" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dietician_number_of_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/_25_reviews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/see_all" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dietician_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>