<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notification">
    <!--<Toolbar>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn_Notification"
            android:layout_width="52dp"
            android:layout_height="38dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtNotification"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/txtNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:fontFamily="@font/baloo2"
            android:text="@string/notification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/backBtn_Notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    <Guideline>-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notificationProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">
        <!-- LinearLayout Start    -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">
<!--Step Tracker-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/step_tracker_notification"
                    android:contentDescription="@string/step_tracker_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/step_tracker"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/step_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
<!--Water Tracker-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/water_tracker_notification" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/water_tracker"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/water_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
<!--Sleep Tracker-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/sleep_tracker_notification" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/sleep_tracker"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sleep_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
<!--Calorie Tracker-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/calories_notification"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nats_regular"
                    android:text="@string/calories_tracker"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/calorie_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>